...
// Nur um Textfeld bei Zurückgehen auf Suchbegriff zu setzen
            
//            self.searchTextfield.text = peoples?.name
        }
    }
    
    @IBOutlet weak var searchTextfield: UITextField!
    @IBAction func buttonLoad(sender: AnyObject) {
        loadPeoples(Int(searchTextfield.text!) ?? 0)
    }
    
    override func prepareForSegue(segue: UIStoryboardSegue, sender: AnyObject?) {
        if segue.identifier == "showInformation" {
...
