...
    @IBOutlet var flavorTextLabel: UILabel!
    @IBOutlet var spriteImageview: UIImageView!
    @IBOutlet var loadingIndicator: UIActivityIndicatorView!
    
    override func awakeFromNib() {
        super.awakeFromNib()
        nameLabel.accessibilityIdentifier = "pokemonSpeciesName"
    }
    
    func configure(for entry: Pokedex.Entry, pokemonSpecies: APIResource<PokeAPI, PokemonSpecies>, sprite: APIResource<PokeAPI, Pokemon>?) {

        numberLabel.text = String(entry.number)
        
...
